--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
   align-items: center;
   justify-content: center;
 }
-.weather-box {
+#weather-box {
   background-color: #77b6ea;
   padding: 2rem;
   width: 38rem;
@@ -27,6 +27,7 @@ html {
   -webkit-box-shadow: 0px 0px 27px 0px rgba(226, 224, 224, 0.29);
   -moz-box-shadow: 0px 0px 27px 0px rgba(226, 224, 224, 0.29);
   box-shadow: 0px 0px 27px 0px rgba(226, 224, 224, 0.29);
+  display: none;
 }
 .part1 {
   background-color: #37393a;
@@ -40,7 +41,7 @@ html {
   border-radius: 1rem;
 }
 .part1 :nth-child(1) {
-  font-size: 1.5rem;
+  font-size: 1.6rem;
 }
 #location,
 #date,
@@ -62,4 +63,41 @@ html {
   margin: 0.5rem;
   font-size: 1.2rem;
   text-align: center;
+}
+
+/*spinner*/
+.spinner {
+  width: 40px;
+  height: 40px;
+  background-color: #77b6ea;
+  margin: 100px auto;
+  -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
+  animation: sk-rotateplane 1.2s infinite ease-in-out;
+}
+
+@-webkit-keyframes sk-rotateplane {
+  0% {
+    -webkit-transform: perspective(120px);
+  }
+  50% {
+    -webkit-transform: perspective(120px) rotateY(180deg);
+  }
+  100% {
+    -webkit-transform: perspective(120px) rotateY(180deg) rotateX(180deg);
+  }
+}
+
+@keyframes sk-rotateplane {
+  0% {
+    transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+  }
+  50% {
+    transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+  }
+  100% {
+    transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+  }
 }
