--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ html {
   background-color: #37393a;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -72,6 +73,12 @@ html {
   font-size: 1.2rem;
   text-align: center;
 }
+footer{
+  font-size: 11px;
+  color:rgba(197, 191, 191, 0.596);
+  margin-top: 40px;
+}
+
 
 /*spinner*/
 .spinner {
